examples/negative/parse_errors/L2/reserved_by.ob
MODULE ReservedBy;

VAR BY: INTEGER;

END ReservedBy.
